2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/23_lt_bool_bool.deca
// Description :
//      comoparasion entre duex boolean 
// Resultats :
//    Erreur Contexteulle : ligne 11 : l'opération < n'est pas possible entre 'boolean' et 'boolean'
//
// Historique :
// cree le 10/01/2024

{
    true <  true ;
}